<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        ads:adSize="BANNER"
        ads:adUnitId="@string/googleAdsKey"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/decoratedBarcodeView"
        android:layout_width="0dp"
        android:layout_height="136dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView">

        <ImageButton
            android:id="@+id/btnToggleTorch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/turnOnTorch"
            android:onClick="toggleTorch"
            android:src="@drawable/turn_on_torch" />

        <ImageButton
            android:id="@+id/btnToggleDecoratedBarcodeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/pauseDecoratedBarcodeView"
            android:onClick="toggleDecoratedBarcodeView"
            app:srcCompat="@drawable/pause_barcode_view" />
    </com.journeyapps.barcodescanner.DecoratedBarcodeView>

    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decoratedBarcodeView"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ivScanned"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/barcodeImageCaptured"
            app:srcCompat="@android:drawable/star_off" />

        <LinearLayout
            android:id="@+id/barcodeScanned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBarcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/barcodeScanned"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvScanned"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:padding="8dp"
                android:text="@string/scanned"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/productNameLookedup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/product"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:focusable="auto"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/googlePlacesLookedup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/tvGooglePlaces"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:focusable="auto"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/etGooglePlaces"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/productPriceLookedup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/tvPrice"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:focusable="auto"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/etPrice"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateLookedup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/tvDate"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:text="@string/etDate"
                tools:focusable="auto" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="新增" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="刪除" />

            <Button
                android:id="@+id/btnQuery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Query" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>